--- a/Assignment-1.ipynb
+++ b/Assignment-1.ipynb
@@ -24,7 +24,6 @@
    "source": [
     "import simpy\n",
     "import random\n",
-    "import numpy as np\n",
     "import math"
    ]
   },
@@ -55,7 +54,10 @@
     "EXPERT_OPERATOR_BREAK_TIME = 3\n",
     "EXPERT_OPERATOR_POISSON_THRESHOLD = math.exp(-1 * EXPERT_OPERATOR_BREAK_RATE)\n",
     "SHIFT_DURATION = 480\n",
-    "CUSTOMER_COUNT = 125"
+    "RANDOM_SEED = 978\n",
+    "CUSTOMER_COUNT = 1000\n",
+    "\n",
+    "random.seed(RANDOM_SEED)"
    ]
   },
   {
@@ -342,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
