--- a/Assignment-1.ipynb
+++ b/Assignment-1.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imports of random, math, numpy and simpy:"
+    "Imports of random, math and simpy:"
    ]
   },
   {
