--- a/Assignment-1.ipynb
+++ b/Assignment-1.ipynb
@@ -79,7 +79,7 @@
     "front_desk_operator_waiting_times = [0] * CUSTOMER_COUNT\n",
     "expert_operator_waiting_times = [0] * CUSTOMER_COUNT\n",
     "total_system_times = [0] * CUSTOMER_COUNT\n",
-    "total_shift_time = 0"
+    "total_run_time = 0"
    ]
   },
   {
@@ -120,17 +120,18 @@
     "class Customer:\n",
     "    customers_served_or_reneged = CUSTOMER_COUNT\n",
     "\n",
-    "    def __init__(self, id, environment, front_desk_operator, expert_operator):\n",
+    "    def __init__(self, id, environment, front_desk_operator, expert_operator, expert_break_process):\n",
     "        self.id = id\n",
     "        self.name = f'Customer {self.id}'\n",
     "        self.environment = environment\n",
     "        self.front_desk_operator = front_desk_operator\n",
     "        self.expert_operator = expert_operator\n",
+    "        self.expert_break_process = expert_break_process\n",
     "        self.action = self.environment.process(self.call())\n",
     "\n",
     "    def call(self):\n",
     "        global front_desk_operator_busy_time, expert_operator_busy_time, \\\n",
-    "            front_desk_operator_waiting_times, expert_operator_waiting_times, total_system_times, total\n",
+    "            front_desk_operator_waiting_times, expert_operator_waiting_times, total_system_times, total_run_time\n",
     "\n",
     "        print(f'{self.name} initiated call at {self.environment.now}') #prints the customer number and calling time\n",
     "        total_system_time_start = self.environment.now #Total system time has now started\n",
@@ -175,7 +176,11 @@
     "\n",
     "        total_system_time_end = self.environment.now\n",
     "        total_system_times[self.id] = total_system_time_end - total_system_time_start #Calculate and assign total system time of current customer\n",
-    "        Customer.customers_served_or_reneged -= 1 #Customer quit the system, so decrease the number of customers"
+    "        Customer.customers_served_or_reneged -= 1 #Customer quit the system, so decrease the number of customers\n",
+    "        \n",
+    "        if Customer.customers_served_or_reneged == 0:\n",
+    "            total_run_time = self.environment.now\n",
+    "            self.expert_break_process.interrupt()"
    ]
   },
   {
@@ -191,9 +196,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_customers(environment, front_desk_operator, expert_operator):\n",
+    "def generate_customers(environment, front_desk_operator, expert_operator, expert_break_process):\n",
     "    for i in range(CUSTOMER_COUNT):\n",
-    "        Customer(i, environment, front_desk_operator, expert_operator)\n",
+    "        Customer(i, environment, front_desk_operator, expert_operator, expert_break_process)\n",
     "        yield environment.timeout(random.expovariate(1 / INTER_ARRIVAL_TIME_MEAN)) #Add the exponentially distributed interarrival times between the customers"
    ]
   },
@@ -238,32 +243,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Shift Generator Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_shifts(environment, expert_break_process):\n",
-    "    shift_count = 1\n",
-    "    while Customer.customers_served_or_reneged != 0:\n",
-    "        print(f'Shift {shift_count} started at {environment.now}')\n",
-    "        yield environment.timeout(SHIFT_DURATION) #Process the shift duration time\n",
-    "        print(f'Shift {shift_count} ended at {environment.now}')\n",
-    "        shift_count += 1 #Update number of shifts\n",
-    "    expert_break_process.interrupt()\n",
-    "\n",
-    "    global total_shift_time\n",
-    "    total_shift_time = SHIFT_DURATION * (shift_count - 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Running of the environment"
    ]
   },
@@ -276,9 +255,8 @@
     "environment = simpy.Environment()\n",
     "front_desk_operator = simpy.Resource(environment, capacity=1) #There is only one front desk operator\n",
     "expert_operator = simpy.Resource(environment, capacity=1) #There is only one expert operator\n",
-    "customer_process = environment.process(generate_customers(environment, front_desk_operator, expert_operator))\n",
     "expert_break_process = environment.process(generate_expert_breaks(environment, expert_operator))\n",
-    "shift_process = environment.process(generate_shifts(environment, expert_break_process))\n",
+    "customer_process = environment.process(generate_customers(environment, front_desk_operator, expert_operator, expert_break_process))\n",
     "environment.run()"
    ]
   },
@@ -298,12 +276,12 @@
     "# STATS\n",
     "total_waiting_times = [front_desk_operator_waiting_times[i] + expert_operator_waiting_times[i] for i in\n",
     "                       range(CUSTOMER_COUNT)]\n",
-    "front_desk_operator_utilization = front_desk_operator_busy_time / total_shift_time\n",
-    "expert_operator_utilization = expert_operator_busy_time / total_shift_time\n",
+    "front_desk_operator_utilization = front_desk_operator_busy_time / total_run_time\n",
+    "expert_operator_utilization = expert_operator_busy_time / total_run_time\n",
     "avg_total_waiting_time = (sum(total_waiting_times)) / CUSTOMER_COUNT\n",
     "max_waiting_to_system_time_ratio = max([total_waiting_times[i] / total_system_times[i] for i in range(CUSTOMER_COUNT)])\n",
     "avg_expert_operator_queue_length = (sum(expert_operator_waiting_times) / CUSTOMER_COUNT) * (\n",
-    "            CUSTOMER_COUNT / total_shift_time)"
+    "            CUSTOMER_COUNT / total_run_time)"
    ]
   },
   {
@@ -344,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
